github actions fix

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         python: ["3.6","3.7","3.8","3.9","3.10"]
@@ -20,7 +21,7 @@ jobs:
     - name: Install challtools
       run: |
         python setup.py install
-        python -m pip install pytest
+        python -m pip install pytest pytest-cov
     - name: pytest
       run: |
         pytest
