support for running tests suite without docker

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 testpaths = tests
 addopts = --cov=challtools --cov-report=term --cov-report=xml
+markers =
+    fails_without_docker: Marks tests with pytest.mark.xfail if pytest is run with --docker-fails
