expect docker to fail on macos github actions since it's not installed

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,4 +24,9 @@ jobs:
           python -m pip install pytest pytest-cov
       - name: pytest
         run: |
-          pytest
+          if [ '${{ matrix.os }}' == 'macos-latest' ]
+          then
+            pytest --docker-fails
+          else
+            pytest
+          fi
