install with pip on github actions

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: ${{ matrix.python }}
       - name: Install challtools
         run: |
-          python setup.py install
+          python -m pip install .
           python -m pip install pytest pytest-cov
       - name: pytest
         run: |
