github actions runners don't seem to support linux containers on windows either

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -16,6 +16,8 @@ jobs:
         include:
           - os: macos-latest
             pytest_args: --docker-fails
+          - os: windows-latest
+            pytest_args: --docker-fails
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
