--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -15,9 +15,9 @@ jobs:
         python: ["3.6", "3.7", "3.8", "3.9", "3.10"]
         include:
           - os: macos-latest
-            pytest_args: --docker-fails
+            pytest_args: --docker-fails --docker-strict
           - os: windows-latest
-            pytest_args: --docker-fails
+            pytest_args: --docker-fails # not strict since windows has docker partially available, just can't run linux containters
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
