--- a/challtools/templates/flask/container/nginx.conf
+++ b/challtools/templates/flask/container/nginx.conf
@@ -22,11 +22,7 @@ http {
         listen 1337;
 
         location / {
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
+            include proxy_params;
             proxy_redirect off;
             proxy_pass http://ctf;
         }
