--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,9 +1,11 @@
 name: pytest
 
 on:
-  - push
-  - pull_request
-  - workflow_dispatch
+  push:
+    branches:
+      - "*"
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   build:
