Apply suggestions from code review
Co-authored-by: mateuszdrwal <me@mateuszdrwal.com>

--- a/challtools/codes.yml
+++ b/challtools/codes.yml
@@ -38,7 +38,7 @@ A008:
   name: Missing service type
   level: 4
   formatted_message: 'The following predefined_service is referencing a missing service type (challenge.yml): "{service_type}".'
-  docs_message: A predefined_service is referencing missing a service type (challenge.yml)
+  docs_message: A predefined_service is referencing a missing service type (challenge.yml)
 
 # challtools messages
 B001:
