modernized test dockerfiles

--- a/tests/templates/build_error/challenge.yml
+++ b/tests/templates/build_error/challenge.yml
@@ -11,6 +11,7 @@ flags: d3f4ul7_fl46
 service:
   type: tcp
   image: container
-  internal_port: 13337
+  internal_port: 1337
+  privileged: true
 
 spec: 0.0.1
