--- a/tests/templates/broken_solution/challenge.yml
+++ b/tests/templates/broken_solution/challenge.yml
@@ -11,7 +11,8 @@ flags: d3f4ul7_fl46
 service:
   type: tcp
   image: container
-  internal_port: 13337
+  internal_port: 1337
+  privileged: true
 
 solution_image: solution
 
