--- a/tests/templates/trivial_tcp/container/Dockerfile
+++ b/tests/templates/trivial_tcp/container/Dockerfile
@@ -1,16 +1,14 @@
-FROM ubuntu
+# Setting up chroot below
+FROM ubuntu AS chroot
 
-RUN apt-get update && apt-get upgrade -y
-
-RUN apt-get install -y xinetd
-
-RUN groupadd -r ctf && useradd -r -g ctf ctf
+RUN groupadd -g 1337 ctf && useradd -r -u 1337 -g ctf ctf
 RUN mkdir -p /home/ctf/
 
 COPY service /home/ctf/
-COPY xinetd_config /etc/xinetd.d/
 
-RUN chown -R root:ctf /home/ctf/
-RUN chmod -R 750 /home/ctf/
+# Now setting up the actual container
+FROM ghcr.io/google/nsjail/nsjail:latest
 
-CMD xinetd -dontfork
+COPY --from=chroot / /chroot
+
+ENTRYPOINT nsjail --port 1337 --chroot /chroot/ --user 1337 --group 1337 --cwd /home/ctf/ --tmpfsmount /tmp --bindmount_ro /etc/resolv.conf:/etc/resolv.conf /home/ctf/service
