--- a/tests/templates/trivial_tcp_solution/solution/Dockerfile
+++ b/tests/templates/trivial_tcp_solution/solution/Dockerfile
@@ -2,6 +2,6 @@ FROM ubuntu
 
 RUN apt-get update && apt-get upgrade -y
 
-RUN apt-get install -y netcat
+RUN apt-get install -y netcat-openbsd
 
 ENTRYPOINT ["sh", "-c"]
