--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=64", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "challtools"
-version = "0.4.9"
 authors = [{ name = "Mateusz Drwal", email = "me@mateuszdrwal.com" }]
 description = "A tool for managing CTF challenges and challenge repositories using the OpenChallSpec"
 readme = "README.md"
@@ -22,6 +21,11 @@ dependencies = [
     'pypiwin32;platform_system=="Windows"',
     "argcomplete>=2.0.0",
     "importlib-resources", # backport, only required for python 3.7 & 3.8 support
+    "importlib-metadata", # backport, only required for python 3.7 support
 ]
 scripts = { challtools = "challtools.cli:main" }
 urls = { repository = "https://github.com/mateuszdrwal/challtools" }
+dynamic = ["version"]
+
+[tool.setuptools_scm]
+version_file = "challtools/_version.py"
