dropping support for EOL python 3.7

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -14,15 +14,12 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        python: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+        python: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         include:
           - os: macos-latest
             pytest_args: --docker-fails --docker-strict
           - os: windows-latest
             pytest_args: --docker-fails # not strict since windows has docker partially available, just can't run linux containters
-        exclude:
-          - os: macos-latest
-            python: "3.7" # does not exist for arm64 macos, which is now the macos-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
