--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "argcomplete>=2.0.0",
     "importlib-resources", # backport, only required for python 3.7 & 3.8 support
 ]
+optional-dependencies = {"dev" = ["pytest", "pytest-cov", "pwntools"]}
 scripts = { challtools = "challtools.cli:main" }
 urls = { repository = "https://github.com/mateuszdrwal/challtools" }
 dynamic = ["version"]
