--- a/challtools/templates/ssh/container/Dockerfile
+++ b/challtools/templates/ssh/container/Dockerfile
@@ -1,7 +1,8 @@
-FROM ubuntu:20.04
+FROM debian:bookworm-slim
 
+ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
-RUN apt-get install -y ssh
+RUN apt-get install -y ssh netcat-traditional
 
 RUN groupadd -g 1337 ctf && useradd -r -u 1337 -g ctf ctf
 RUN passwd -d ctf
@@ -16,3 +17,5 @@ RUN chown -R root:ctf /home/ctf/
 RUN chmod -R 750 /home/ctf/
 
 CMD /usr/sbin/sshd -De
+
+HEALTHCHECK --start-period=20s --start-interval=1s CMD nc -zv 127.0.0.1 22 || exit 1
