--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "importlib-resources", # backport, only required for python 3.7 & 3.8 support
 ]
 optional-dependencies = {"dev" = ["pytest", "pytest-cov", "pwntools"]}
-scripts = { challtools = "challtools.cli:main" }
+scripts = { challtools = "challtools.entry:main" }
 urls = { repository = "https://github.com/mateuszdrwal/challtools" }
 dynamic = ["version"]
 
