validator type annotations, linting fixes and tweaks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,4 +34,4 @@ reportAny = false
 reportExplicitAny = false
 
 [tool.pylint."messages control"]
-disable = ["line-too-long", "missing-module-docstring", "too-few-public-methods"]
+disable = ["line-too-long", "missing-module-docstring", "too-few-public-methods", "fixme"]
