--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "jsonschema>=3.0.0",
     "docker>=2.3.0,!=3.1.2,!=5.0.0",
     "requests>=2.0.0",
+    "boto3",
     'pypiwin32;platform_system=="Windows"',
     "argcomplete>=2.0.0",
 ]
