--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,11 @@ dependencies = [
     "jsonschema>=3.0.0",
     "docker>=2.3.0,!=3.1.2,!=5.0.0",
     "requests>=2.0.0",
+    "minio",
     'pypiwin32;platform_system=="Windows"',
     "argcomplete>=2.0.0",
 ]
-optional-dependencies = {"dev" = ["pytest", "pytest-cov", "pwntools"]}
+optional-dependencies = { "dev" = ["pytest", "pytest-cov", "pwntools"] }
 scripts = { challtools = "challtools.entry:main" }
 urls = { repository = "https://github.com/mateuszdrwal/challtools" }
 dynamic = ["version"]
@@ -33,7 +34,12 @@ reportAny = false
 reportExplicitAny = false
 
 [tool.pylint."messages control"]
-disable = ["line-too-long", "missing-module-docstring", "too-few-public-methods", "fixme"]
+disable = [
+    "line-too-long",
+    "missing-module-docstring",
+    "too-few-public-methods",
+    "fixme",
+]
 
 [tool.isort]
 profile = "black"
