fix pyversion bug in test custom_container_name_collision_single

--- a/tests/templates/custom_container_name_collision_single/chall1/challenge.yml
+++ b/tests/templates/custom_container_name_collision_single/chall1/challenge.yml
@@ -16,6 +16,7 @@ deployment:
       services:
         - type: website
           internal_port: 1337
+          external_port: 1337
       privileged: true
   networks: {}
   volumes: {}
